# powdr-asm-py

./: .gitignore  README.md  asm_to_pil.py  hello_world.asm  hello_world.py  main.py  main_processor.py  memory.py  powdr_asm_parser.py  processor_utils.py  pyproject.toml  requirements.txt  risc_v_processor.py
src/: asm_to_pil.py  demo.py  hello_world.py  memory.py  std.py
tests/: test_powdr_asm_parser.py
